--- a/app/src/main/res/layout/diary_item.xml
+++ b/app/src/main/res/layout/diary_item.xml
@@ -33,18 +33,6 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/KilojoulCountTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:gravity="center"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:text="Kilojoule Count"
-                android:textAlignment="textStart"
-                android:textSize="24sp" />
-
-            <TextView
                 android:id="@+id/DiaryDateTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,7 +41,19 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:text="Date"
-                android:textAlignment="textEnd"
+                android:textAlignment="viewStart"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/KilojoulCountTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:text="Kilojoule Count"
+                android:textAlignment="viewEnd"
                 android:textSize="24sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
