--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -222,36 +222,50 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:focusable="true"
+        android:onClick="goBackClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/divider_horizontal_dark"
-        android:focusable="true" />
+        app:srcCompat="@android:drawable/divider_horizontal_dark" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/AddEntryFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         android:focusable="true"
+        android:onClick="newEntryClick"
         app:backgroundTint="@android:color/holo_green_dark"
-        app:layout_constraintBottom_toBottomOf="@+id/CancelFab"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/CalcDatePicker"
         app:srcCompat="@android:drawable/divider_horizontal_dark" />
 
     <EditText
         android:id="@+id/CalcDatePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:autofillHints=""
+        android:clickable="false"
+        android:contextClickable="false"
         android:ems="10"
-        android:hint="Date"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:focusedByDefault="false"
+        android:hint="Click to select date"
         android:inputType="date"
+        android:lineSpacingExtra="0sp"
+        android:linksClickable="false"
+        android:onClick="showDatePickerDialog"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/CancelFab" />
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/CancelFab"
+        app:layout_constraintEnd_toStartOf="@+id/AddEntryFAB"
+        app:layout_constraintStart_toEndOf="@+id/CancelFab"
+        app:layout_constraintTop_toBottomOf="@+id/HR2" />
 
 </android.support.constraint.ConstraintLayout>
