--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -200,6 +200,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="0"
+        android:text="0"
         android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/NetTotalTextView"
