--- a/app/src/main/res/layout/activity_diary_deets.xml
+++ b/app/src/main/res/layout/activity_diary_deets.xml
@@ -160,7 +160,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/nkiTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="50"
