--- a/app/src/main/res/layout/activity_diary_deets.xml
+++ b/app/src/main/res/layout/activity_diary_deets.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Activities.DiaryDeets">
 
-    <EditText
+    <TextView
         android:id="@+id/foodTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/DinnerTV"
+            android:id="@+id/dinnerTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="33.333"
@@ -66,15 +66,15 @@
 
     <View
         android:id="@+id/divider"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="14dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="8dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/foodTV" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <EditText
+    <TextView
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -131,8 +131,9 @@
 
     <View
         android:id="@+id/divider3"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="14dp"
+        android:layout_marginTop="8dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,10 +143,12 @@
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="100"
+        app:layout_constraintBottom_toTopOf="@+id/divider5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider3">
@@ -164,13 +167,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="50"
-            android:textAlignment="viewStart"
+            android:paddingStart="8sp"
+            android:textAlignment="textStart"
             android:textSize="24sp" />
     </LinearLayout>
 
     <View
         android:id="@+id/divider5"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="14dp"
         android:layout_marginTop="8dp"
         android:background="?android:attr/listDivider"
@@ -179,6 +183,50 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
     <LinearLayout
+        android:id="@+id/linearLayout5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/divider2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider5">
+
+        <TextView
+            android:id="@+id/textViewX"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:text="Date:"
+            android:textAlignment="viewEnd"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/dateTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:paddingStart="8dp"
+            android:text="TextView"
+            android:textSize="24sp" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="0dp"
+        android:layout_height="14dp"
+        android:layout_marginTop="7dp"
+        android:layout_weight="1"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="1dp"
@@ -196,31 +244,35 @@
         app:layout_constraintVertical_bias="1.0">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/previousEntryBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="25"
+            android:onClick="prevEntryClick"
             android:text="Prev" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/overviewBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="25"
-            android:text="Button" />
+            android:onClick="overviewClick"
+            android:text="Overview" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/newEntryBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="25"
-            android:text="Button" />
+            android:onClick="launchCalcClick"
+            android:text="New Entry" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/nextEntryBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="25"
+            android:onClick="nextEntryClick"
             android:text="Next" />
     </LinearLayout>
 
