Fully functional. Add lang support, maybe thread the data collection?

--- a/app/src/main/res/layout/activity_diary_deets.xml
+++ b/app/src/main/res/layout/activity_diary_deets.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="33.333"
-            android:singleLine="true"
+            android:singleLine="false"
             android:text="Breakfast"
             android:textAlignment="center"
             android:textSize="24sp" />
@@ -49,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="33.333"
+            android:singleLine="false"
             android:text="Lunch"
             android:textAlignment="center"
             android:textSize="24sp" />
@@ -58,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="33.333"
+            android:singleLine="false"
             android:text="Dinner"
             android:textAlignment="center"
             android:textSize="24sp" />
@@ -68,7 +70,7 @@
         android:id="@+id/divider"
         android:layout_width="0dp"
         android:layout_height="14dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="33.333"
+            android:singleLine="false"
             android:text="Running"
             android:textAlignment="center"
             android:textSize="24sp" />
@@ -114,6 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="33.333"
+            android:singleLine="false"
             android:text="Gym"
             android:textAlignment="center"
             android:textSize="24sp" />
@@ -123,6 +127,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="33.333"
+            android:singleLine="false"
             android:text="Other"
             android:textAlignment="center"
             android:textSize="24sp" />
@@ -133,7 +138,7 @@
         android:id="@+id/divider3"
         android:layout_width="0dp"
         android:layout_height="14dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,11 +149,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:weightSum="100"
-        app:layout_constraintBottom_toTopOf="@+id/divider5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider3">
@@ -176,7 +179,7 @@
         android:id="@+id/divider5"
         android:layout_width="0dp"
         android:layout_height="14dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -229,9 +232,7 @@
         android:id="@+id/linearLayout4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="1dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:orientation="horizontal"
