--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:text="Food: "
+            android:text="@string/foodHeader2"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,8 +35,9 @@
             android:layout_weight="1"
             android:autofillHints=""
             android:ems="10"
-            android:hint="Breakfast"
+            android:hint="@string/breakfastHeader"
             android:inputType="number"
+            android:nextFocusDown="@id/LunchEditText"
             android:textAlignment="center"
             android:textSize="20sp" />
 
@@ -48,8 +49,9 @@
             android:layout_weight="1"
             android:autofillHints=""
             android:ems="10"
-            android:hint="Lunch"
+            android:hint="@string/lunchHeader"
             android:inputType="number"
+            android:nextFocusDown="@id/DinnerEditText"
             android:textAlignment="center"
             android:textSize="20sp" />
 
@@ -60,8 +62,9 @@
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Dinner"
+            android:hint="@string/dinnerHeading"
             android:inputType="number"
+            android:nextFocusDown="@id/Exe1EditText"
             android:textAlignment="center"
             android:textSize="20sp" />
     </LinearLayout>
@@ -83,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:text="Exercise: "
+            android:text="@string/exerciseHeader2"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -96,8 +99,9 @@
             android:layout_weight="1"
             android:autofillHints=""
             android:ems="10"
-            android:hint="Running"
+            android:hint="@string/runningHeader"
             android:inputType="number"
+            android:nextFocusDown="@id/Exe2EditText"
             android:textAlignment="center"
             android:textSize="20sp" />
 
@@ -109,8 +113,9 @@
             android:layout_weight="1"
             android:autofillHints=""
             android:ems="10"
-            android:hint="Gym"
+            android:hint="@string/gymHeader"
             android:inputType="number"
+            android:nextFocusDown="@id/Exe3EditText"
             android:textAlignment="center"
             android:textSize="20sp" />
 
@@ -121,8 +126,9 @@
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Other"
+            android:hint="@string/otherHeader"
             android:inputType="number"
+            android:nextFocusDown="@id/CalcDatePicker"
             android:textAlignment="center"
             android:textSize="20sp" />
     </LinearLayout>
@@ -141,11 +147,12 @@
         android:id="@+id/FoodTotalTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="44dp"
         android:layout_weight="1"
-        android:text="Food Total:"
+        android:text="@string/foodTotalHeader"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/ExcersiseTotalTextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/HR1" />
 
     <TextView
@@ -156,9 +163,10 @@
         android:layout_marginTop="45dp"
         android:layout_marginBottom="45dp"
         android:layout_weight="1"
-        android:text="Exercise Total:"
+        android:text="@string/exerciseTotalHeader"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/NetTotalTextView"
+        app:layout_constraintEnd_toEndOf="@+id/FoodTotalTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/FoodTotalTextView" />
 
@@ -168,7 +176,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
         android:layout_weight="1"
-        android:text="Net Total:"
+        android:text="@string/netTotalHeader"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/HR2"
         app:layout_constraintEnd_toEndOf="@+id/ExcersiseTotalTextView" />
@@ -229,7 +237,7 @@
         android:onClick="goBackClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/divider_horizontal_dark" />
+        app:srcCompat="@drawable/ic_delete_black_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/AddEntryFAB"
@@ -243,7 +251,7 @@
         app:backgroundTint="@android:color/holo_green_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/divider_horizontal_dark" />
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
     <EditText
         android:id="@+id/CalcDatePicker"
@@ -256,13 +264,13 @@
         android:clickable="false"
         android:contextClickable="false"
         android:ems="10"
-        android:focusable="false"
         android:focusableInTouchMode="false"
         android:focusedByDefault="false"
-        android:hint="Click to select date"
+        android:hint="@string/datePickHint"
         android:inputType="date"
         android:lineSpacingExtra="0sp"
         android:linksClickable="false"
+        android:nextFocusDown="@id/AddEntryFAB"
         android:onClick="showDatePickerDialog"
         android:textAlignment="center"
         android:textSize="24sp"
