--- a/app/src/main/res/layout/diary_item.xml
+++ b/app/src/main/res/layout/diary_item.xml
@@ -40,7 +40,7 @@
                 android:gravity="center"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:text="Date"
+                android:text="@string/dateHeader"
                 android:textAlignment="viewStart"
                 android:textSize="24sp" />
 
